# static_leak

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  coverage.yml  doc-coverage-badge.yml  doc-coverage-pr-comment.yml  format.yml
src/: async_std_impl.rs  lib.rs  spin_impl.rs  std_impl.rs
tests/: async_std.rs  spin.rs  std.rs  utils.rs
