[package]
name = "static_leak"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Leak references with static lifetimes from static Mutexes and RwLocks"
repository = "https://github.com/itemis/static_leak/"
keywords = ["static", "leak", "mutex", "rwlock", "ffi"]
categories = ["rust-patterns", "no-std", "embedded"]

[dependencies]
async-std = { version = "1.12.0", optional = true }
spin = { version = "0.9.4", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["std"]
std = []
async-std = ["dep:async-std"]
spin = ["dep:spin"]
